feat: request-dto,response-dto, error-dto개발 및 login-doc 작성, lint 수정
