# src/types/response.dto.ts
@@ -1,0 +1,7 @@
+import { Auth } from './../auth/interface/auth.interface';
+export namespace AuthResponse {
+  export interface Login {
+    is_login: boolean;
+    employee: Auth.AccessTokenSignPayload;
+  }
+}
